# bready

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bready_bug.md  bready_bug.yml  bready_feature.md  bready_feature.yml  bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: build-bready.yml  docker.yml
include/: bready_bot.h  bridge_db_store.h  bridge_store.h  odoo_client.h  odoo_commands.h  user_store.h
src/: bready_bot.cc  bridge_db_store.cc  bridge_store.cc  main.cc  odoo_client.cc  odoo_commands.cc  user_store.cc
